--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,3 +23,11 @@ jobs:
       - name: Run Maven Tests (TestNG Suite)
         run: mvn clean test -DsuiteXmlFile=./testng.xml -Denv=qa
 
+      - name: Upload a Build Artifact
+        if: always()
+        uses: actions/upload-artifact@v5.0.0
+        with:
+          name: Surefire Report
+          path: target/surefire-reports/
+          retention-days: 10
+
