--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
     branches: [ "master" ]
   schedule:   #Schedule the cron job for mid-night IST
     - cron: "30 18 * * *"
+    - cron: "30 17 * * *"
   workflow_dispatch:
     inputs:
       env:
