--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,9 +38,15 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Run Maven Tests (TestNG Suite)
-        run: mvn clean test -DsuiteXmlFile=${{github.event.inputs.suiteXmlFile}} -Denv=${{github.event.inputs.env}}
+      - name: Default Values for Execution
+        id: default
+        run: |
+          echo "suiteXmlFile=${{ github.event.inputs.suiteXmlFile || 'testng.xml' }}" >> $GITHUB_OUTPUT
+          echo "env=${{ github.event.inputs.env || 'qa' }}" >> $GITHUB_OUTPUT
 
+      - name: Execute Test Automation Framework
+        run: mvn clean test -DsuiteXmlFile="${{ steps.default.outputs.suiteXmlFile }}" -Denv="${{ steps.default.outputs.env }}"
+      
       - name: Upload a Build Artifact
         if: always()
         uses: actions/upload-artifact@v5.0.0
